--- a/published-papers.html
+++ b/published-papers.html
@@ -19,7 +19,8 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto" style="font-size: 14pt; font-family: 'book antiqua', palatino, serif; font-weight:500;">
+                <ul class="navbar-nav ms-auto"
+                    style="font-size: 14pt; font-family: 'book antiqua', palatino, serif; font-weight:500;">
                     <li class="nav-item"></li>
                     <a class="nav-link" href="index.html">Home</a>
                     </li>
@@ -38,10 +39,25 @@
                     <li class="nav-item">
                         <a class="nav-link" href="assets/resume_umitgurun.pdf">Resume</a>
                     </li>
-                    <button class="btn " type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    <button class="btn" id="toggleSearchBar" type="submit"><i
+                            class="fa-solid fa-magnifying-glass"></i></button>
             </div>
         </div>
     </nav>
+    <div id="backdrop"></div>
+
+    <!-- Floating Search Bar -->
+    <div id="floatingSearchBar" class="container-fluid">
+        <form>
+            <div class="container-xl">
+                <div class="d-flex">
+                    <input class="form-control form-control-lg me-2" type="search" placeholder="Search..."
+                        aria-label="Search">
+                    <button class="btn btn-main btn-lg" type="submit"><i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+            </div>
+        </form>
+    </div>
 
     <!-- Main Content -->
     <div class="container mt-5">
@@ -341,6 +357,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
