--- a/working-papers.html
+++ b/working-papers.html
@@ -40,8 +40,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="assets/resume_umitgurun.pdf">Resume</a>
                     </li>
-                    <button class="btn" id="toggleSearchBar" type="submit"><i
-                            class="fa-solid fa-magnifying-glass"></i></button>
+                    <!-- <button class="btn" id="toggleSearchBar" type="submit"><i
+                            class="fa-solid fa-magnifying-glass"></i></button> -->
             </div>
         </div>
     </nav>
