--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
                 Review of Financial Studies in 2019. Finally, his research has also attracted attention in the popular
                 press, with cites in the Financial Times, Wall Street Journal, Fortune, Institutional Investor, and the
                 Economist.</p>
+            <div class="statcounter mt-5"></div>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
-
     <!-- Default Statcounter code for
     https://umitgurun.github.io/ https://umitgurun.github.io/
     -->
@@ -101,7 +101,7 @@
     src="https://www.statcounter.com/counter/counter.js"
     async></script>
     <noscript>
-        <div class="statcounter mt-5">
+        <div class="statcounter">
             <a title="Web Analytics"
     href="https://statcounter.com/" target="_blank"><img
     class="statcounter"
