--- a/index.html
+++ b/index.html
@@ -83,33 +83,31 @@
                 Review of Financial Studies in 2019. Finally, his research has also attracted attention in the popular
                 press, with cites in the Financial Times, Wall Street Journal, Fortune, Institutional Investor, and the
                 Economist.</p>
-            <div class="statcounter mt-5"></div>
+                <!-- Default Statcounter code for
+                    https://umitgurun.github.io/ https://umitgurun.github.io/
+                    -->
+                    <script type="text/javascript">
+                    var sc_project=13041079;
+                    var sc_invisible=1;
+                    var sc_security="15db6be8";
+                    </script>
+                    <script type="text/javascript"
+                    src="https://www.statcounter.com/counter/counter.js"
+                    async></script>
+                    <noscript>
+                        <div class="statcounter ma-5">
+                            <a title="Web Analytics"
+                    href="https://statcounter.com/" target="_blank"><img
+                    class="statcounter"
+                    src="https://c.statcounter.com/13041079/0/15db6be8/1/"
+                    alt="Web Analytics"
+                    referrerPolicy="no-referrer-when-downgrade"></a>
+                        </div>
+                    </noscript>
+                <!-- End of Statcounter Code -->
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
-    <!-- Default Statcounter code for
-    https://umitgurun.github.io/ https://umitgurun.github.io/
-    -->
-    <script type="text/javascript">
-    var sc_project=13041079;
-    var sc_invisible=1;
-    var sc_security="15db6be8";
-    </script>
-    <script type="text/javascript"
-    src="https://www.statcounter.com/counter/counter.js"
-    async></script>
-    <noscript>
-        <div class="statcounter">
-            <a title="Web Analytics"
-    href="https://statcounter.com/" target="_blank"><img
-    class="statcounter"
-    src="https://c.statcounter.com/13041079/0/15db6be8/1/"
-    alt="Web Analytics"
-    referrerPolicy="no-referrer-when-downgrade"></a>
-        </div>
-    </noscript>
-    <!-- End of Statcounter Code -->
-
 </html>
