--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 patent litigation policy on innovation outputs. He received <em>distinguished associate editor</em>
                 awards from Management Science multiple times, and a <em>distinguished referee</em> award from the
                 Review of Financial Studies in 2019. Finally, his research has also attracted attention in the popular
-                press, with cites in the Financial Times, Wall Street Journal, Fortune, Institutional Investor, and the
+                press, with cites in the Financial Times, Wall Street Journal, Institutional Investor, Fortune, and the
                 Economist.</p>
                 <!-- Default Statcounter code for
                     https://umitgurun.github.io/ https://umitgurun.github.io/
