--- a/working-papers.html
+++ b/working-papers.html
@@ -65,7 +65,7 @@
         <div class="content-area__wrapper">
             <div class="content-area entry-content">
                 <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong>[1]
-                        </strong>This Land is My Land… Until It’s Not: Adverse Possession. Laws and Home Values
+                        </strong>This Land is My Land… Until It’s Not: Adverse Possession Laws and Home Values
                         &nbsp;(with Artem Joukov and Vikram Nanda)&nbsp; [2024]<strong><a
                                 href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4060413"><span
                                     style="font-size: 10pt;" >DOWNLOAD</span></a></strong></span></p>
