--- a/working-papers.html
+++ b/working-papers.html
@@ -106,6 +106,12 @@
                         href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3718682"><span
                             style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong><span
                                     style="font-size: 10pt;">DOWNLOAD</span></strong></span></a></p>
+                <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong>[8] </strong>The
+                        ESG – Innovation Disconnect: Evidence from Green Patenting &nbsp; (with Lauren Cohen and Quoc
+                        Nguyen)&nbsp; [2024] </span> <a
+                        href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3718682"><span
+                            style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong><span
+                                    style="font-size: 10pt;">DOWNLOAD</span></strong></span></a></p>
                 <p>&nbsp;</p>
                 <div class="statcounter"><a title="Web Analytics" href="http://statcounter.com/" target="_blank"
                         rel="noopener noreferrer"><img decoding="async" class="statcounter"
