--- a/working-papers.html
+++ b/working-papers.html
@@ -106,10 +106,10 @@
                         href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3718682"><span
                             style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong><span
                                     style="font-size: 10pt;">DOWNLOAD</span></strong></span></a></p>
-                <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong>[8] </strong>The
-                        ESG – Innovation Disconnect: Evidence from Green Patenting &nbsp; (with Lauren Cohen and Quoc
-                        Nguyen)&nbsp; [2024] </span> <a
-                        href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3718682"><span
+                <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong>[9] </strong>
+                        Consumption Smoothing via Product Markets &nbsp; (with Alex Butler, Irem Demirci, and Yessenia
+                        Tellez)&nbsp; [2021] </span> <a
+                        href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3530165"><span
                             style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong><span
                                     style="font-size: 10pt;">DOWNLOAD</span></strong></span></a></p>
                 <p>&nbsp;</p>
