--- a/published-papers.html
+++ b/published-papers.html
@@ -287,7 +287,7 @@
                             Problem of Patent Trolling. &nbsp;</strong></em>(w/ Lauren Cohen and Scott D. Kominers)
                     2016. </span><br><span style="font-size: 10pt;"><strong><span
                             style="text-decoration: underline; color: #993366;"> SCIENCE</span></strong> &nbsp;&nbsp;
-                    <strong><span style="color: #800000;"><a href="https://www.umitgurun.com/work/advancescreening.mp4"
+                    <strong><span style="color: #800000;"><a href="https://www.youtube.com/watch?v=ClpzNQVljjY"
                                 target="_blank" rel="noopener noreferrer">VIDEO</a></span></strong><span
                         style="color: #800000;">&nbsp;&nbsp; </span><a
                         href="https://https://umitgurun.github.io/assets/gurun_troll.pdf"
