--- a/published-papers.html
+++ b/published-papers.html
@@ -126,7 +126,7 @@
                             FINANCE</span></strong>&nbsp;</span><span
                     style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong><span
                             style="font-size: 10pt;"><a
-                                href="https://umitgurun.github.io/assets/gurun_mispricing.pdf" target="_blank"
+                                href="https://umitgurun.github.io/assets/gurun_misclassification.pdf" target="_blank"
                                 rel="noreferrer noopener">DOWNLOAD</a></span></strong></span></p>
 
 
@@ -290,7 +290,7 @@
                     <strong><span style="color: #800000;"><a href="https://www.youtube.com/watch?v=ClpzNQVljjY"
                                 target="_blank" rel="noopener noreferrer">VIDEO</a></span></strong><span
                         style="color: #800000;">&nbsp;&nbsp; </span><a
-                        href="https://https://umitgurun.github.io/assets/gurun_troll.pdf"
+                        href="https://umitgurun.github.io/assets/gurun_troll.pdf"
                         target="_blank" rel="noopener noreferrer"><strong>DOWNLOAD</strong></a></span></p>
             
             <p><span style="font-size: 12pt; font-family: book\ antiqua, palatino, serif;">[21] <em><strong>Sell-Side
