--- a/published-papers.html
+++ b/published-papers.html
@@ -76,8 +76,7 @@
             <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;">[2] <em><strong>Buying the
                             Verdict</strong></em> (with Lauren Cohen)
                     &nbsp;2024. <span style="font-size: 10pt;"><strong><span
-                                style="text-decoration: underline; color: #993366;">MANAGEMENT
-                                SCIENCE</span></strong></span>&nbsp;<a
+                                style="text-decoration: underline; color: #993366;">MANAGEMENT SCIENCE</span></strong></span>&nbsp;<a
                         href="https://pubsonline.informs.org/doi/abs/10.1287/mnsc.2023.4896"><strong><span
                                 style="font-size: 10pt;">DOWNLOAD</span></strong></a></span></p>
             
