--- a/published-papers.html
+++ b/published-papers.html
@@ -351,7 +351,7 @@
                         </strong></em>(w/Geoffrey Booth) 2008. </span><br><span style="font-size: 10pt;"><strong><span
                             style="text-decoration: underline; color: #993366;">JOURNAL OF EMPIRICAL
                             FINANCE</span></strong>&nbsp;<strong>&nbsp; </strong></span><strong><a
-                        href="https://umitgurun.github.io/assets/gurun_volatility.pdf target="_blank"
+                        href="https://umitgurun.github.io/assets/gurun_volatility.pdf" target="_blank"
                         rel="noopener noreferrer"><span style="font-size: 10pt;">DOWNLOAD</span></a> </strong></p>
 
         </div>
