--- a/published-papers.html
+++ b/published-papers.html
@@ -346,13 +346,14 @@
 
 
 
-            <p><span style="font-size: 12pt; font-family: book\ antiqua, palatino, serif;">[26] <em><strong>Volatility
-                            clustering and the bid-ask spread: Exchange rate behavior in early Renaissance Florence.
-                        </strong></em>(w/Geoffrey Booth) 2008. </span><br><span style="font-size: 10pt;"><strong><span
-                            style="text-decoration: underline; color: #993366;">JOURNAL OF EMPIRICAL
-                            FINANCE</span></strong>&nbsp;<strong>&nbsp; </strong></span><strong><a
+            <p><span style="font-size: 12pt; font-family: book\ antiqua, palatino, serif;">[26] <em><strong>Aggregate
+                            Market Reaction to Earnings Announcements. </strong></em>(w/William Cready) 2010.
+                </span><br><span style="font-size: 10pt;"><strong><span
+                            style="text-decoration: underline; color: #993366;">JOURNAL OF ACCOUNTING
+                            RESEARCH</span></strong>&nbsp;<strong>&nbsp; </strong></span><strong><a
                         href="https://umitgurun.github.io/assets/gurun_volatility.pdf" target="_blank"
                         rel="noopener noreferrer"><span style="font-size: 10pt;">DOWNLOAD</span></a> </strong></p>
+
 
         </div>
     </div>
