--- a/published-papers.html
+++ b/published-papers.html
@@ -72,13 +72,15 @@
                             </span></strong>&nbsp;</span><strong><span style="font-size: 10pt;"><a
                                 href="https://umitgurun.github.io/assets/gurun_disaster.pdf" target="_blank"
                                 rel="noreferrer noopener">DOWNLOAD</a></span></strong></span></p>
-            
-            <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;">[2] <em><strong>Buying the
-                            Verdict</strong></em> (with Lauren Cohen)
-                    &nbsp;2024. <span style="font-size: 10pt;"><strong><span
-                                style="text-decoration: underline; color: #993366;">MANAGEMENT SCIENCE</span></strong></span>&nbsp;<a
-                        href="https://umitgurun.github.io/assets/gurun_verdict.pdf"><strong><span
-                                style="font-size: 10pt;">DOWNLOAD</span></strong></a></span></p>
+
+            <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;">[2] <em><strong>Disaster
+                            Lending: “Fair” Prices, but “Unfair” Access. </strong></em>(w/Lauren Cohen<span
+                        style="font-size: 12pt; font-family: book\ antiqua, palatino, serif;">) 2024 (forthcoming).
+                    </span><br><span style="font-size: 10pt;"><strong><span
+                                style="text-decoration: underline; color: #993366;"> MANAGEMENT SCIENCE
+                            </span></strong>&nbsp;</span><strong><span style="font-size: 10pt;"><a
+                                href="https://umitgurun.github.io/assets/gurun_verdict.pdf" target="_blank"
+                                rel="noreferrer noopener">DOWNLOAD</a></span></strong></span></p>
             
             <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;">[3] <em><strong>Measuring
                             and Improving Stakeholder Welfare is Easier Said Than Done. </strong></em>(w/Jordan
@@ -347,10 +349,9 @@
 
 
             <p><span style="font-size: 12pt; font-family: book\ antiqua, palatino, serif;">[26] <em><strong>Aggregate
-                            Market Reaction to Earnings Announcements. </strong></em>(w/William Cready) 2010.
+                            Market Reaction to Earnings Announcements. </strong></em>(w/Geoff Booth) 2010.
                 </span><br><span style="font-size: 10pt;"><strong><span
-                            style="text-decoration: underline; color: #993366;">JOURNAL OF ACCOUNTING
-                            RESEARCH</span></strong>&nbsp;<strong>&nbsp; </strong></span><strong><a
+                            style="text-decoration: underline; color: #993366;">JOURNAL OF EMPIRCAL FINANCE</span></strong>&nbsp;<strong>&nbsp; </strong></span><strong><a
                         href="https://umitgurun.github.io/assets/gurun_volatility.pdf" target="_blank"
                         rel="noopener noreferrer"><span style="font-size: 10pt;">DOWNLOAD</span></a> </strong></p>
 
