--- a/published-papers.html
+++ b/published-papers.html
@@ -73,8 +73,7 @@
                                 href="https://umitgurun.github.io/assets/gurun_disaster.pdf" target="_blank"
                                 rel="noreferrer noopener">DOWNLOAD</a></span></strong></span></p>
 
-            <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;">[2] <em><strong>Disaster
-                            Lending: “Fair” Prices, but “Unfair” Access. </strong></em>(w/Lauren Cohen<span
+            <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;">[2] <em><strong>Buying the Verdict </strong></em>(w/Lauren Cohen<span
                         style="font-size: 12pt; font-family: book\ antiqua, palatino, serif;">) 2024 (forthcoming).
                     </span><br><span style="font-size: 10pt;"><strong><span
                                 style="text-decoration: underline; color: #993366;"> MANAGEMENT SCIENCE
