--- a/working-papers.html
+++ b/working-papers.html
@@ -69,8 +69,8 @@
                         Wu)&nbsp; [2024]<strong> <a
                                 href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4773403"><span
                                     style="font-size: 10pt;">DOWNLOAD</span></a></strong></span></p>
-                <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong>[1]
-                        </strong>When Protectionism Kills Talent &nbsp;(<strong> </strong></span></p>
+                <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong>      
+                        &nbsp&nbspWhen Protectionism Kills Talent &nbsp;</span></p>
                 <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong>[2]
                         </strong>This Land is My Land… Until It’s Not: Adverse Possession Laws and Home Values
                         &nbsp;(with Artem Joukov and Vikram Nanda)&nbsp; [2024]<strong><a
