--- a/working-papers.html
+++ b/working-papers.html
@@ -75,7 +75,7 @@
                                 href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4060413"><span
                                     style="font-size: 10pt;" >DOWNLOAD</span></a></strong></span></p>
                 <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong>[3]
-                        </strong>Platform Venture Capitalists &nbsp;(with Zheng Liu and Steven Xiao)&nbsp;
+                        </strong>5.	Gatekeepers and Kingmakers: Do Superplatforms Distort Digital Competition &nbsp;(with Zheng Liu and Steven Xiao)&nbsp;
                         [2024]<strong> <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4863436"><span
                                     style="font-size: 10pt;">DOWNLOAD</span></a></strong></span></p>
                 <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong>[4]
