--- a/working-papers.html
+++ b/working-papers.html
@@ -66,7 +66,7 @@
             <div class="content-area entry-content">
                 <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong>[1]
                         </strong>When Protectionism Kills Talent &nbsp;(with Mehmet Canayaz, Isil Erel, and Yufeng
-                        Wu)&nbsp; [2024]<strong> <a
+                        Wu)&nbsp; [2025]<strong> <a
                                 href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4773403"><span
                                     style="font-size: 10pt;">DOWNLOAD</span></a></strong></span></p>
                 <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong>[2]
@@ -75,7 +75,7 @@
                                 href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4060413"><span
                                     style="font-size: 10pt;" >DOWNLOAD</span></a></strong></span></p>
                 <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong>[3]
-                        </strong>5.	Gatekeepers and Kingmakers: Do Superplatforms Distort Digital Competition &nbsp;(with Zheng Liu and Steven Xiao)&nbsp;
+                        </strong>Gatekeepers and Kingmakers: Do Superplatforms Distort Digital Competition &nbsp;(with Zheng Liu and Steven Xiao)&nbsp;
                         [2024]<strong> <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4863436"><span
                                     style="font-size: 10pt;">DOWNLOAD</span></a></strong></span></p>
                 <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong>[4]
@@ -84,14 +84,14 @@
                             style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong><span
                                     style="font-size: 10pt;">DOWNLOAD</span></strong></span></a></p>
                 <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong>[5]
-                        </strong>Earnings and the Value of Voting Rights&nbsp;&nbsp;(with Oguzhan Karakas)&nbsp; [2023]
+                        </strong>Earnings and the Value of Voting Rights&nbsp;&nbsp;(with Oguzhan Karakas)&nbsp; [2025]
                     </span> <span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong><span
                                 style="font-size: 10pt;"><a
                                     href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2793545" target="_blank"
                                     rel="noopener noreferrer">DOWNLOAD</a></span></strong></span></p>
                 <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong>[6] </strong>Too
                         Many Managers: Strategic Use of Titles to Avoid Overtime Payments (with Lauren Cohen and Bugra
-                        Ozel)&nbsp; [2024] </span> <a
+                        Ozel)&nbsp; [2025] </span> <a
                         href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3731176"><span
                             style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong><span
                                     style="font-size: 10pt;">DOWNLOAD</span></strong></span></a></p>
@@ -103,7 +103,7 @@
                                     style="font-size: 10pt;">DOWNLOAD</span></strong></span></a></p>
                 <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong>[8] </strong>
                         Consumption Smoothing via Product Markets &nbsp; (with Alex Butler, Irem Demirci, and Yessenia
-                        Tellez)&nbsp; [2021] </span> <a
+                        Tellez)&nbsp; [2025] </span> <a
                         href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3530165"><span
                             style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong><span
                                     style="font-size: 10pt;">DOWNLOAD</span></strong></span></a></p>
