--- a/published-papers.html
+++ b/published-papers.html
@@ -62,12 +62,15 @@
     <!-- Main Content -->
     <div class="container mt-5">
         <div class="content-area entry-content">
-<p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong>[6] </strong>The
-                        ESG – Innovation Disconnect: Evidence from Green Patenting &nbsp; (with Lauren Cohen and Quoc
-                        Nguyen)&nbsp; [2025] </span> <a
-                        href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3718682"><span
-                            style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;"><strong><span
-                                    style="font-size: 10pt;">DOWNLOAD</span></strong></span></a></p>
+          <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;">[1] <em><strong>The
+                        ESG – Innovation Disconnect: Evidence from Green Patenting. </strong></em>(w/Lauren Cohen and Quoc
+                        Nguyen<span
+                        style="font-size: 12pt; font-family: book\ antiqua, palatino, serif;">) 2025 (forthcoming).
+                    </span><br><span style="font-size: 10pt;"><strong><span
+                                style="text-decoration: underline; color: #993366;"> MANAGEMENT SCIENCE
+                            </span></strong>&nbsp;</span><strong><span style="font-size: 10pt;"><a
+                                href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3718682" target="_blank"
+                                rel="noreferrer noopener">DOWNLOAD</a></span></strong></span></p>
             
             <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;">[1] <em><strong>Disaster
                             Lending: “Fair” Prices, but “Unfair” Access. </strong></em>(w/Taylor Begley, Amiyatosh
