--- a/published-papers.html
+++ b/published-papers.html
@@ -85,7 +85,7 @@
             <p><span style="font-size: 12pt; font-family: 'book antiqua', palatino, serif;">[3] <em><strong>Disaster
                             Lending: “Fair” Prices, but “Unfair” Access. </strong></em>(w/Taylor Begley, Amiyatosh
                     Purnanandam and Daniel Weagley<span
-                        style="font-size: 12pt; font-family: book\ antiqua, palatino, serif;">) 2024 (forthcoming).
+                        style="font-size: 12pt; font-family: book\ antiqua, palatino, serif;">) 2024.
                     </span><br><span style="font-size: 10pt;"><strong><span
                                 style="text-decoration: underline; color: #993366;"> MANAGEMENT SCIENCE
                             </span></strong>&nbsp;</span><strong><span style="font-size: 10pt;"><a
