delete citation number & update resume.pdf path

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 Twitter
                 <img class="h-3 w-3" src="./assets/images/icons/extrnal-link.svg" alt="" />
               </a>
-              <a href="https://umitgurun.github.io/assets/resume_umitgurun.pdf" target="_blank" rel="noopener noreferrer" class="text-sm font-medium transition-colors border hover:bg-gray-100 h-9 rounded-md px-3 flex items-center gap-1">
+              <a href="./assets/resume_umitgurun.pdf" target="_blank" rel="noopener noreferrer" class="text-sm font-medium transition-colors border hover:bg-gray-100 h-9 rounded-md px-3 flex items-center gap-1">
                 Resume
                 <img class="h-3 w-3" src="./assets/images/icons/extrnal-link.svg" alt="" />
               </a>
