change title's color & add tracking script

--- a/index.html
+++ b/index.html
@@ -104,11 +104,23 @@
     </div>
 
     <script src="./assets/js/main.js"></script>
-
-    <style>
-      #about .data-content-kjsadlkjas {
-        background-color: black;
-      }
-    </style>
+    <!-- Default Statcounter code for https://umitgurun.github.io/ https://umitgurun.github.io/-->
+    <script type="text/javascript">
+      var sc_project = 13041079;
+      var sc_invisible = 1;
+      var sc_security = "15db6be8";
+    </script>
+    <script type="text/javascript" src="https://www.statcounter.com/counter/counter.js" async></script>
+    <noscript
+      ><div class="statcounter">
+        <a
+          title="Web Analytics
+  Made Easy - Statcounter"
+          href="https://statcounter.com/"
+          target="_blank"
+          ><img class="statcounter" src="https://c.statcounter.com/13041079/0/15db6be8/1/" alt="Web Analytics Made Easy - Statcounter" referrerpolicy="no-referrer-when-downgrade"
+        /></a></div
+    ></noscript>
+    <!-- End of Statcounter Code -->
   </body>
 </html>
