in progress tab and delete titles

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="flex space-x-4 max-w-5xl mx-auto px-2 md:px-4 flex overflow-x-auto py-2 md:py-4 scrollbar-hide" role="tablist" aria-label="Profile Tabs">
             <button class="tab-button px-4 py-2 text-sm font-medium rounded-md hover:bg-gray-100 bg-blue-500 text-white" role="tab" aria-selected="true" id="tab-about" data-tab="about">About</button>
             <button class="tab-button px-4 py-2 text-sm font-medium rounded-md hover:bg-gray-100" role="tab" aria-selected="false" id="tab-research" data-tab="research">Research</button>
-            <button class="tab-button px-4 py-2 text-sm font-medium rounded-md hover:bg-gray-100" role="tab" aria-selected="false" id="tab-WP" data-tab="WP">W/P</button>
+            <button class="tab-button px-4 py-2 text-sm font-medium rounded-md hover:bg-gray-100" role="tab" aria-selected="false" id="tab-WP" data-tab="WP">In-Progress</button>
             <button class="tab-button px-4 py-2 text-sm font-medium rounded-md hover:bg-gray-100" role="tab" aria-selected="false" id="tab-media" data-tab="media">Media</button>
             <button class="tab-button px-4 py-2 text-sm font-medium rounded-md hover:bg-gray-100" role="tab" aria-selected="false" id="tab-blog" data-tab="blog">Blog</button>
             <button class="tab-button px-4 py-2 text-sm font-medium rounded-md hover:bg-gray-100" role="tab" aria-selected="false" id="tab-service" data-tab="service">Service</button>
@@ -54,7 +54,7 @@
         <!-- Tab Contents -->
         <div class="px-4 py-8 max-w-5xl mx-auto">
           <div class="tab-content" id="about" role="tabpanel" aria-labelledby="tab-about">
-            <h2 class="text-3xl font-bold mb-8">About</h2>
+            <!-- <h2 class="text-3xl font-bold mb-8">About</h2> -->
             <div class="data-content rounded-lg border p-6">
               <p class="mt-4 text-gray-700">Umit Gurun is Stan Liebowitz professor of finance and accounting at the University of Texas at Dallas. He received his Ph.D from Michigan State University. He is a past visiting professor at the University of Texas at Austin (2010-2011), Harvard University (2014), and a research economist at NBER (2015-2021). He is currently an associate editor at the Review of Financial Studies.</p>
               <p class="mt-4 text-gray-700">Professor Gurun’s research focuses on a variety of issues in empirical asset pricing and corporate finance, including the impact of financial media and advertising on asset prices; the impact of counterfeit products on brand images, and firm valuation, labor disputes, among others.</p>
@@ -63,21 +63,21 @@
             </div>
           </div>
           <div class="tab-content hidden" id="research" role="tabpanel" aria-labelledby="tab-research">
-            <h2 class="text-3xl font-bold mb-8">Research</h2>
+            <!-- <h2 class="text-3xl font-bold mb-8">Research</h2> -->
             <div class="data-content"></div>
           </div>
           <div class="tab-content hidden" id="WP" role="tabpanel" aria-labelledby="tab-WP">
-            <h2 class="text-3xl font-bold mb-8">Working Papers</h2>
+            <!-- <h2 class="text-3xl font-bold mb-8">Working Papers</h2> -->
 
             <div class="data-content"></div>
           </div>
           <div class="tab-content hidden" id="media" role="tabpanel" aria-labelledby="tab-media">
-            <h2 class="text-3xl font-bold mb-8">Media Coverage</h2>
+            <!-- <h2 class="text-3xl font-bold mb-8">Media Coverage</h2> -->
 
             <div class="data-content"></div>
           </div>
           <div class="tab-content hidden" id="blog" role="tabpanel" aria-labelledby="tab-blog">
-            <h2 class="text-3xl font-bold mb-8">Blog Posts</h2>
+            <!-- <h2 class="text-3xl font-bold mb-8">Blog Posts</h2> -->
 
             <div class="data-content"></div>
           </div>
